Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -381,50 +381,54 @@ deb http://us.archive.ubuntu.com/ubuntu/ disco main restricted universe
 multiverse
 ```
 
-В этом синтаксисе есть тип архива, URL, распространение и один или несколько компонентов, где: 
+Его синтакс - тип архива, URL, распространение и один или несколько компонентов, где: 
 
-Archive type  
+**Archive type**  
 Репозиторий может содержать пакеты с готовым к запуску программным обеспечением (двоичные пакеты, тип `deb`) или с исходным кодом этого программного обеспечения (исходные пакеты, тип `deb-src`). В приведенном выше примере представлены бинарные пакеты. 
 
-URL  
+**URL**  
 URL-адрес репозитория. 
 
-Распространение  
-Имя (или кодовое имя) дистрибутива, для которого предоставляются пакеты. В одном репозитории могут размещаться пакеты для нескольких дистрибутивов. В приведенном выше примере диско - это кодовое имя для Ubuntu 19.04 Disco Dingo. 
+**Распространение**  
+Имя (или кодовое имя) дистрибутива, для которого предоставляются пакеты. В одном репозитории могут размещаться пакеты для нескольких дистрибутивов. В приведенном выше примере `disco` - это кодовое имя для Ubuntu 19.04 *Disco Dingo*. 
 
-Компоненты  
-Каждый компонент представляет собой набор пакетов. Эти компоненты могут отличаться в разных дистрибутивах Linux. Например, в Ubuntu и производных версиях это: 
+**Компоненты**  
+Каждый компонент представляет собой набор пакетов. Эти компоненты могут отличаться в разных дистрибутивах Linux. 
 
-основной  
+Например, в Ubuntu и производных версиях это: 
+
+`main`  
 содержит официально поддерживаемые пакеты с открытым исходным кодом. 
 
-ограниченный  
+`restricted`  
 содержит официально поддерживаемое программное обеспечение с закрытым исходным кодом, например драйверы устройств для графических карт. 
 
-вселенная  
+`universe`  
 содержит программное обеспечение с открытым исходным кодом, поддерживаемое сообществом. 
 
-мультивселенная  
-содержит неподдерживаемое программное обеспечение, программное обеспечение с закрытым исходным кодом или обремененное патентами. В Debian основными компонентами являются: 
+`multiverse`  
+содержит неподдерживаемое программное обеспечение, программное обеспечение с закрытым исходным кодом или обремененное патентами. 
 
-основной  
+В Debian основными компонентами являются: 
+
+`main`  
 состоит из пакетов, совместимых с Руководством по свободному программному обеспечению Debian (DFSG), работа которых не зависит от программного обеспечения за пределами этой области. Включенные здесь пакеты считаются частью дистрибутива Debian. 
 
-вклад  
+`contrib`  
 содержит пакеты, совместимые с DFSG, но которые зависят от других пакетов, которых нет в `main`. 
 
-несвободный  
+`non-free`  
 содержит пакеты, несовместимые с DFSG. 
 
-безопасность  
+`security`  
 содержит обновления безопасности. 
 
-резервные копии  
+`backports`  
 содержит более свежие версии пакетов, которые находятся в файле `main`. Цикл разработки стабильных версий Debian довольно длинный (около двух лет), и это гарантирует, что пользователи могут получить самые свежие пакеты без необходимости изменять основной репозиторий ядра.
 
 >Вы можете узнать больше о *Руководстве по свободному программному обеспечению Debian* по адресу: https://www.debian.org/social_contract#guidelines
 
-Чтобы добавить новый репозиторий для получения пакетов, вы можете просто добавить соответствующую строку (обычно предоставляемую сопровождающим репозитория) в конец `sources.list`, сохранить файл и перезагрузить индекс пакета с помощью `apt-get update`. После этого пакеты в новом репозитории будут доступны для установки с помощью `apt-get install`. 
+Чтобы добавить новый репозиторий для получения пакетов, вы можете просто добавить соответствующую строку (обычно предоставляемую разработчиком репозитория) в конец `sources.list`, сохранить файл и перезагрузить индекс пакета с помощью `apt-get update`. После этого пакеты в новом репозитории будут доступны для установки с помощью `apt-get install`. 
 
 Имейте в виду, что строки, начинающиеся с символа `#`, считаются комментариями и игнорируются.
 
