Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -196,9 +196,10 @@ APT работает совместно с репозиториями прогр
 >Для `apt` и `apt-get` могут требовать сетевое соединение, поскольку пакеты и индексы пакетов могут нуждаться в загрузке их с удаленного сервера.
 
 
-## Обновление индекса пакета
+## Индексация пакетов
 
-Перед установкой или обновлением программного обеспечения с помощью APT рекомендуется сначала обновить индекс пакетов, чтобы получить информацию о новых и обновленных пакетах. Это делается с помощью команды `apt-get`, за которой следует параметр `update`:
+Перед установкой или обновлением программного обеспечения с помощью APT рекомендуется сначала проиндексировать пакеты, чтобы получить информацию о новых и обновленных пакетах. Это делается с помощью команды `apt-get`, за которой следует параметр `update`:
+
 ```console
 # apt-get update
 Ign:1 http://dl.google.com/linux/chrome/deb stable InRelease
@@ -213,12 +214,14 @@ Hit:9 http://us.archive.ubuntu.com/ubuntu disco-updates InRelease
 Hit:10 http://us.archive.ubuntu.com/ubuntu disco-backports InRelease
 Reading package lists... Done
 ```
+
 >Вместо `apt-get update` вы также можете использовать `apt update`.
 
 
 ## Установка и удаление пакетов
 
-После обновления индекса пакета вы можете теперь установить пакет. Это делается с помощью `apt-get install`, за которым следует имя пакета, который вы хотите установить:
+После индексирования пакетов вы можете установить пакет. Это делается с помощью `apt-get install`, за которым следует имя пакета, который вы хотите установить:
+
 ```console
 # apt-get install xournal
 Reading package lists... Done
@@ -230,7 +233,9 @@ The following NEW packages will be installed:
 Need to get 285 kB of archives.
 After this operation, 1041 kB of additional disk space will be used.
 ```
+
 Точно так же, чтобы удалить пакет, используйте команду `apt-get remove`, за которой следует имя пакета:
+
 ```console
 # apt-get remove xournal
 Reading package lists... Done
@@ -242,7 +247,9 @@ The following packages will be REMOVED:
 After this operation, 1041 kB disk space will be freed.
 Do you want to continue? [Y/n]
 ```
+
 Имейте в виду, что при установке или удалении пакетов APT выполнит автоматическое разрешение зависимостей. Это означает, что любые дополнительные пакеты, необходимые для устанавливаемого пакета, также будут установлены, и что пакеты, которые зависят от пакета, который вы удаляете, также будут удалены. APT всегда будет показывать, что будет установлено или удалено, прежде чем спросить, хотите ли вы продолжить:
+
 ```console
 # apt-get remove p7zip
 Reading package lists... Done
@@ -254,22 +261,27 @@ The following packages will be REMOVED:
 After this operation, 6545 kB disk space will be freed.
 Do you want to continue? [Y/n]
 ```
+
 Обратите внимание, что при удалении пакета соответствующие файлы конфигурации остаются в системе. Чтобы удалить пакет и любые файлы конфигурации, используйте параметр `purge` вместо `remove` или параметр `remove` с параметром `--purge`:
+
 ```console
 # apt-get purge p7zip
 ```
+
 или
+
 ```console
 # apt-get remove --purge p7zip
 ```
+
 >Вы также можете использовать `apt install` и `apt remove`.
 
 
 ## Исправление нарушеных зависимостей
 
-В системе могут быть «нарушенные зависимости». Это означает, что один или несколько установленных пакетов зависят от других пакетов, которые не были установлены или больше не присутствуют. Это может произойти из-за ошибки APT или из-за пакета, установленного вручную. 
+В системе могут быть нарушены зависимости. Это означает, что один или несколько установленных пакетов зависят от других пакетов, которые не были установлены или больше не присутствуют в системе. Это может произойти из-за ошибки APT или из-за пакета, установленного вручную. 
 
-Чтобы решить эту проблему, используйте команду `apt-get install -f`. Она попытается «исправить» сломанные пакеты, установив недостающие зависимости, гарантируя, что все пакеты снова будут согласованы.
+Чтобы решить эту проблему, используйте команду `apt-get install -f`. Она попытается исправить сломанные пакеты, установив недостающие зависимости, гарантируя, что все пакеты снова будут согласованы.
 
 >Вы также можете использовать `apt install -f`.
 
@@ -277,6 +289,7 @@ Do you want to continue? [Y/n]
 ## Обновление пакетов
 
 APT можно использовать для автоматического обновления любых установленных пакетов до последних версий, доступных в репозиториях. Это делается с помощью команды `apt-get upgrade`. Перед его запуском сначала обновите индекс пакета с помощью `apt-get update`:
+
 ```console
 # apt-get update
 Hit:1 http://us.archive.ubuntu.com/ubuntu disco InRelease
@@ -301,6 +314,7 @@ Need to get 243 MB of archives.
 After this operation, 30.7 kB of additional disk space will be used.
 Do you want to continue? [Y/n]
 ```
+
 Сводка в нижней части выходных данных показывает, сколько пакетов будет обновлено, сколько будет установлено, удалено или сохранено, общий размер загрузки и сколько дополнительного дискового пространства потребуется для завершения операции. Чтобы завершить обновление, просто ответьте `Y` и подождите, пока `apt-get` завершит задачу. 
 
 Чтобы обновить один пакет, просто запустите `apt-get upgrade`, а затем укажите имя пакета. Как и в случае с `dpkg`, `apt-get` сначала проверяет, установлена ли предыдущая версия пакета. В этом случае пакет будет обновлен до последней версии, доступной в репозитории. В противном случае будет установлена новая копия.
@@ -445,17 +459,22 @@ deb-src http://deb.debian.org/debian buster-backports main contrib non-free
 
 ### Список содержимого пакета и поиск файлов
 
-Утилиту под названием `apt-file` можно использовать для выполнения дополнительных операций с индексом пакета, таких как перечисление содержимого пакета или поиск пакета, содержащего определенный файл. Эта утилита может не быть установлена в вашей системе по умолчанию. В этом случае вы обычно можете установить его с помощью `apt-get`:
+Утилиту под названием `apt-file` можно использовать для выполнения дополнительных операций с индексированием пакетов, таких как перечисление содержимого пакета или поиск пакета, содержащего определенный файл. Эта утилита может быть не установлена в вашей системе по умолчанию. В этом случае вы можете установить ее как обычно с помощью `apt-get`:
+
 ```console
 # apt-get install apt-file
 ```
-После установки вам нужно будет обновить кеш пакетов, используемый для `apt-file`:
+
+После установки вам нужно будет обновить кеш пакетов, используя `apt-file`:
+
 ```console
 # apt-file update
 ```
+
 Обычно это занимает всего несколько секунд. После этого вы готовы к использованию `apt-file`. 
 
 Чтобы вывести список содержимого пакета, используйте параметр `list`, за которым следует имя пакета:
+
 ```console
 # apt-file list unrar
 unrar: /usr/bin/unrar-nonfree
@@ -463,13 +482,16 @@ unrar: /usr/share/doc/unrar/changelog.Debian.gz
 unrar: /usr/share/doc/unrar/copyright
 unrar: /usr/share/man/man1/unrar-nonfree.1.gz
 ```
+
 >Вы также можете использовать `apt list` вместо списка `apt-file`.
 
 Вы можете искать файл во всех пакетах, используя параметр поиска, за которым следует имя файла. Например, если вы хотите узнать, какой пакет предоставляет файл с именем `libSDL2.so`, вы можете использовать:
+
 ```console
 # apt-file search libSDL2.so
 libsdl2-dev: /usr/lib/x86_64-linux-gnu/libSDL2.so
 ```
+
 Ответ - пакет `libsdl2-dev`, который предоставляет файл `/usr/lib/x86_64-linux-gnu/libSDL2.so`. 
 
 Разница между поиском `apt-file` и `dpkg-query` заключается в том, что поиск `apt-file` также будет искать неустановленные пакеты, в то время как `dpkg-query` может отображать только файлы, принадлежащие установленному пакету.
@@ -531,7 +553,7 @@ libsdl2-dev: /usr/lib/x86_64-linux-gnu/libSDL2.so
 Эта команда повторно запустит сценарий после установки пакета, чтобы администратор мог внести изменения в конфигурацию установки пакета. 
 
 `apt-get update`  
-Эта команда обновит локальный индекс пакета, чтобы он соответствовал тому, что доступно в настроенных репозиториях в каталоге `/etc/apt/`. 
+Эта команда проиндексирует пакеты, чтобы они соответствовали тем, которые доступны в настроенных репозиториях в каталоге `/etc/apt/`. 
 
 `apt-get install`  
 Эта команда загрузит пакет из удаленного репозитория и установит его вместе с зависимостями, также может использоваться для установки пакета Debian, который уже был загружен. 
