Update 102.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
@@ -10,4 +10,17 @@
 
 ## Введение
 
-Давным-давно, когда Linux был еще в зачаточном состоянии, наиболее распространенным способом распространения программного обеспечения был сжатый файл (обычно в виде архива .tar.gz) с исходным кодом, который вы распаковывали и компилировали самостоятельно. Однако по мере роста количества и сложности программного обеспечения необходимость в способе распространения предварительно скомпилированного программного обеспечения стала очевидной. В конце концов, не у всех были ресурсы, как по времени, так и по вычислительной мощности, для компиляции больших проектов, таких как ядро ​​Linux или X-сервер. Вскоре усилились попытки стандартизировать способ распространения этих программных «пакетов», и родились первые менеджеры пакетов. Эти инструменты значительно упростили установку, настройку или удаление программного обеспечения из системы. Одним из них был диспетчер пакетов RPM и соответствующий ему инструмент (rpm), разработанный Red Hat. Сегодня они широко используются не только в самой Red Hat Enterprise Linux (RHEL), но и в ее потомках, таких как Fedora, CentOS и Oracle Linux, других дистрибутивах, таких как openSUSE, и даже в других операционных системах, таких как IBM AIX. Другие инструменты управления пакетами, популярные в дистрибутивах, совместимых с Red Hat, - это yum (YellowDog Updater Modified), dnf (Dandified YUM) и zypper, которые могут упростить многие аспекты установки, обслуживания и удаления пакетов, значительно упрощая управление пакетами. В этом уроке мы узнаем, как использовать rpm, yum, dnf и zypper для получения, установки, управления и удаления программного обеспечения в системе Linux.
+Давным-давно, когда Linux был еще в зачаточном состоянии, наиболее распространенным способом распространения программного обеспечения был сжатый файл (обычно в виде архива `.tar.gz`) с исходным кодом, который вы распаковывали и компилировали самостоятельно. 
+
+Однако по мере роста количества и сложности программного обеспечения необходимость в способе распространения предварительно скомпилированного программного обеспечения стала очевидной. В конце концов, не у всех были ресурсы, как по времени, так и по вычислительной мощности, для компиляции больших проектов, таких как ядро Linux или X-сервер. 
+
+Вскоре усилились попытки стандартизировать способ распространения этих программных «пакетов», и родились первые менеджеры пакетов. Эти инструменты значительно упростили установку, настройку или удаление программного обеспечения из системы. 
+
+Одним из них был *диспетчер пакетов RPM* и соответствующий ему инструмент (`rpm`), разработанный Red Hat. Сегодня они широко используются не только в самой Red Hat Enterprise Linux (RHEL), но и в ее потомках, таких как Fedora, CentOS и Oracle Linux, других дистрибутивах, таких как openSUSE, и даже в других операционных системах, таких как IBM AIX. 
+
+Другие инструменты управления пакетами, популярные в дистрибутивах, совместимых с Red Hat, - это `yum` (YellowDog Updater Modified), `dnf` (Dandified YUM) и `zypper`, которые могут упростить многие аспекты установки, обслуживания и удаления пакетов, значительно упрощая управление пакетами. 
+
+В этом уроке мы узнаем, как использовать `rpm`, `yum`, `dnf` и `zypper` для получения, установки, управления и удаления программного обеспечения в системе Linux.
+
+>Несмотря на использование одного и того же формата пакетов, между дистрибутивами есть внутренние различия, поэтому пакет, созданный специально для openSUSE, может не работать в системе RHEL, и наоборот. При поиске пакетов всегда проверяйте совместимость и, если возможно, старайтесь найти тот, который подходит для вашего конкретного дистрибутива.
+
