Update 102.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
@@ -24,3 +24,48 @@
 
 >Несмотря на использование одного и того же формата пакетов, между дистрибутивами есть внутренние различия, поэтому пакет, созданный специально для openSUSE, может не работать в системе RHEL, и наоборот. При поиске пакетов всегда проверяйте совместимость и, если возможно, старайтесь найти тот, который подходит для вашего конкретного дистрибутива.
 
+
+## Менеджер пакетов RPM (rpm)
+
+Менеджер пакетов RPM (`rpm`) - важный инструмент для управления пакетами программного обеспечения в системах на основе Red Hat (или производных).
+
+
+## Установка, обновление и удаление пакетов
+
+Самая простая операция - установить пакет, что можно сделать с помощью:
+
+```console
+# rpm -i PACKAGENAME
+```
+
+Где `PACKAGENAME` - это имя пакета `.rpm`, который вы хотите установить. 
+
+Если в системе есть предыдущая версия пакета, вы можете обновить его до более новой версии, используя параметр `-U`:
+
+```console
+# rpm -U PACKAGENAME
+```
+
+Если предыдущая версия `PACKAGENAME` не установлена, будет установлена новая копия. Чтобы избежать этого и обновить только установленный пакет, используйте параметр `-F`. 
+
+В обеих операциях вы можете добавить параметр `-v`, чтобы получить подробный вывод (дополнительная информация отображается во время установки), и `-h`, чтобы напечатать знаки решетки (`#`) в качестве наглядного пособия для отслеживания хода установки. Несколько параметров можно объединить в один, поэтому `rpm -i -v -h` совпадает с `rpm -ivh`. 
+
+Чтобы удалить установленный пакет, передайте параметр `-e` (как в «erase») в `rpm`, за которым следует имя пакета, который вы хотите удалить:
+
+```console
+# rpm -e wget
+```
+
+Если установленный пакет зависит от удаляемого пакета, вы получите сообщение об ошибке:
+
+```console
+# rpm -e unzip
+error: Failed dependencies:
+	/usr/bin/unzip is needed by (installed) file-roller-3.28.1-2.el7.x86_64
+```
+
+Чтобы завершить операцию, сначала вам нужно будет удалить пакеты, которые зависят от того, который вы хотите удалить (в примере выше, `file-roller`). Вы можете передать несколько имен пакетов в `rpm -e`, чтобы удалить сразу несколько пакетов.
+
+
+## Работа с зависимостями
+
