--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
@@ -69,3 +69,329 @@ error: Failed dependencies:
 
 ## Работа с зависимостями
 
+Чаще всего пакет может зависеть от того, что другие будут работать должным образом. Например, редактору изображений могут потребоваться библиотеки для открытия файлов JPG, или утилите может потребоваться набор инструментов для виджетов, такой как Qt или GTK, для своего пользовательского интерфейса. 
+
+`rpm` проверит, установлены ли эти зависимости в вашей системе, и не сможет установить пакет, если это не так. В этом случае в `rpm` будет указано, чего не хватает. Однако он `не может` самостоятельно решать зависимости. 
+
+В приведенном ниже примере пользователь пытался установить пакет для редактора изображений GIMP, но некоторые зависимости отсутствовали:
+```console
+# rpm -i gimp-2.8.22-1.el7.x86_64.rpm
+error: Failed dependencies:
+	babl(x86-64) >= 0.1.10 is needed by gimp-2:2.8.22-1.el7.x86_64
+	gegl(x86-64) >= 0.2.0 is needed by gimp-2:2.8.22-1.el7.x86_64
+	gimp-libs(x86-64) = 2:2.8.22-1.el7 is needed by gimp-2:2.8.22-1.el7.x86_64
+	libbabl-0.1.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libgegl-0.2.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libgimp-2.0.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libgimpbase-2.0.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libgimpcolor-2.0.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libgimpconfig-2.0.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libgimpmath-2.0.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libgimpmodule-2.0.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libgimpthumb-2.0.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libgimpui-2.0.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libgimpwidgets-2.0.so.0()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libmng.so.1()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libwmf-0.2.so.7()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+	libwmflite-0.2.so.7()(64bit) is needed by gimp-2:2.8.22-1.el7.x86_64
+```
+Пользователь должен найти пакеты `.rpm` с соответствующими зависимостями и установить их. У менеджеров пакетов, таких как `yum`, `zypper` и `dnf`, есть инструменты, которые могут определить, какой пакет предоставляет конкретный файл. Об этом мы поговорим позже в этом уроке.
+
+
+## Список установленных пакетов
+
+Чтобы получить список всех пакетов, установленных в вашей системе, используйте `rpm -qa` (подумайте о «запросить все»).
+
+```console
+# rpm -qa
+selinux-policy-3.13.1-229.el7.noarch
+pciutils-libs-3.5.1-3.el7.x86_64
+redhat-menus-12.0.2-8.el7.noarch
+grubby-8.28-25.el7.x86_64
+hunspell-en-0.20121024-6.el7.noarch
+dejavu-fonts-common-2.33-6.el7.noarch
+xorg-x11-drv-dummy-0.3.7-1.el7.1.x86_64
+libevdev-1.5.6-1.el7.x86_64
+[...]
+```
+
+
+## Получение информации о пакете
+
+Чтобы получить информацию об установленном пакете, такую как номер версии, архитектура, дата установки, упаковщик, сводка и т. д., Используйте `rpm` с параметрами `-qi` (подумайте о «запросе информации»), за которыми следует имя пакета. Например:
+
+```console
+# rpm -qi unzip
+Name        : unzip
+Version     : 6.0
+Release     : 19.el7
+Architecture: x86_64
+Install Date: Sun 25 Aug 2019 05:14:39 PM EDT
+Group       : Applications/Archiving
+Size        : 373986
+License     : BSD
+Signature   : RSA/SHA256, Wed 25 Apr 2018 07:50:02 AM EDT, Key ID 24c6a8a7f4a80eb5
+Source RPM  : unzip-6.0-19.el7.src.rpm
+Build Date  : Wed 11 Apr 2018 01:24:53 AM EDT
+Build Host  : x86-01.bsys.centos.org
+Relocations : (not relocatable)
+Packager    : CentOS BuildSystem <http://bugs.centos.org>
+Vendor      : CentOS
+URL         : http://www.info-zip.org/UnZip.html
+Summary     : A utility for unpacking zip files
+Description :
+The unzip utility is used to list, test, or extract files from a zip
+archive. Zip archives are commonly found on MS-DOS systems. The zip
+utility, included in the zip package, creates zip archives. Zip and
+unzip are both compatible with archives created by PKWARE(R)'s PKZIP
+for MS-DOS, but the programs' options and default behaviors do differ
+in some respects.
+
+Install the unzip package if you need to list, test or extract files from
+a zip archive.
+```
+
+Чтобы получить список файлов внутри `установленного` пакета, используйте параметры `-ql` (подумайте о «списке запросов»), за которым следует имя пакета:
+
+```console
+# rpm -ql unzip
+/usr/bin/funzip
+/usr/bin/unzip
+/usr/bin/unzipsfx
+/usr/bin/zipgrep
+/usr/bin/zipinfo
+/usr/share/doc/unzip-6.0
+/usr/share/doc/unzip-6.0/BUGS
+/usr/share/doc/unzip-6.0/LICENSE
+/usr/share/doc/unzip-6.0/README
+/usr/share/man/man1/funzip.1.gz
+/usr/share/man/man1/unzip.1.gz
+/usr/share/man/man1/unzipsfx.1.gz
+/usr/share/man/man1/zipgrep.1.gz
+/usr/share/man/man1/zipinfo.1.gz
+```
+
+Если вы хотите получить информацию или список файлов из пакета, который еще не был установлен, просто добавьте параметр `-p` к командам выше, за которым следует имя файла RPM (`FILENAME`). Таким образом, `rpm -qi PACKAGENAME` становится `rpm -qip FILENAME`, а `rpm -ql PACKAGENAME` становится `rpm -qlp FILENAME`, как показано ниже.
+
+```console
+# rpm -qip atom.x86_64.rpm
+Name        : atom
+Version     : 1.40.0
+Release     : 0.1
+Architecture: x86_64
+Install Date: (not installed)
+Group       : Unspecified
+Size        : 570783704
+License     : MIT
+Signature   : (none)
+Source RPM  : atom-1.40.0-0.1.src.rpm
+Build Date  : sex 09 ago 2019 12:36:31 -03
+Build Host  : b01bbeaf3a88
+Relocations : /usr
+URL         : https://atom.io/
+Summary     : A hackable text editor for the 21st Century.
+Description :
+A hackable text editor for the 21st Century.
+```
+
+```console
+# rpm -qlp atom.x86_64.rpm
+/usr/bin/apm
+/usr/bin/atom
+/usr/share/applications/atom.desktop
+/usr/share/atom
+/usr/share/atom/LICENSE
+/usr/share/atom/LICENSES.chromium.html
+/usr/share/atom/atom
+/usr/share/atom/atom.png
+/usr/share/atom/blink_image_resources_200_percent.pak
+/usr/share/atom/content_resources_200_percent.pak
+/usr/share/atom/content_shell.pak
+
+(listing goes on)
+```
+
+
+## Определение пакета владеющего конкретным файлом
+
+Чтобы узнать, какой установленный пакет владеет файлом, используйте `-qf`(считайте, «файл запроса»), за которым следует полный путь к файлу:
+
+```console
+# rpm -qf /usr/bin/unzip
+unzip-6.0-19.el7.x86_64
+```
+
+В приведенном выше примере файл `/usr/bin/unzip` принадлежит пакету `unzip-6.0-19.el7.x86_64`.
+
+
+## Модифицированный модуль обновления YellowDog (YUM)
+
+`yum` изначально разрабатывался как *Yellow Dog Updater* (YUP), инструмент для управления пакетами в дистрибутиве Yellow Dog Linux. Со временем он эволюционировал для управления пакетами в других системах на основе RPM, таких как Fedora, CentOS, Red Hat Enterprise Linux и Oracle Linux. 
+
+Функционально она похожа на утилиту `apt` в системах на базе Debian, она может искать, устанавливать, обновлять и удалять пакеты и автоматически обрабатывать зависимости. `yum` можно использовать для установки одного пакета или для обновления всей системы сразу.
+
+
+## Поиск пакетов
+
+Чтобы установить пакет, вам необходимо знать его имя. Для этого вы можете выполнить поиск с помощью `yum search PATTERN`, где `PATTERN` - это имя пакета, который вы ищете. Результатом является список пакетов, имя или сводка которых содержат указанный шаблон поиска. Например, если вам нужна утилита для обработки сжатых файлов 7Zip (с расширением `.7z`), вы можете использовать:
+
+```console
+# yum search 7zip
+Loaded plugins: fastestmirror, langpacks
+Loading mirror speeds from cached hostfile
+ * base: mirror.ufscar.br
+ * epel: mirror.globo.com
+ * extras: mirror.ufscar.br
+ * updates: mirror.ufscar.br
+=========================== N/S matchyutr54ed: 7zip ============================
+p7zip-plugins.x86_64 : Additional plugins for p7zip
+p7zip.x86_64 : Very high compression ratio file archiver
+p7zip-doc.noarch : Manual documentation and contrib directory
+p7zip-gui.x86_64 : 7zG - 7-Zip GUI version
+
+  Name and summary matches only, use "search all" for everything.
+```
+
+
+## Установка, обновление и удаление пакетов
+
+Чтобы установить пакет с помощью yum, используйте команду `yum install PACKAGENAME`, где `PACKAGENAME` - это имя пакета. `yum` получит пакет и соответствующие зависимости из онлайн-репозитория и установит все в вашей системе.
+
+```console
+# yum install p7zip
+Loaded plugins: fastestmirror, langpacks
+Loading mirror speeds from cached hostfile
+ * base: mirror.ufscar.br
+ * epel: mirror.globo.com
+ * extras: mirror.ufscar.br
+ * updates: mirror.ufscar.br
+Resolving Dependencies
+--> Running transaction check
+---> Package p7zip.x86_64 0:16.02-10.el7 will be installed
+--> Finished Dependency Resolution
+
+Dependencies Resolved
+
+==========================================================================
+ Package        Arch            Version               Repository     Size
+==========================================================================
+Installing:
+ p7zip          x86_64          16.02-10.el7          epel          604 k
+
+Transaction Summary
+==========================================================================
+Install  1 Package
+
+Total download size: 604 k
+Installed size: 1.7 M
+Is this ok [y/d/N]:
+```
+
+Чтобы обновить установленный пакет, используйте yum update `PACKAGENAME`, где `PACKAGENAME` - это имя пакета, который вы хотите обновить. Например:
+
+```console
+# yum update wget
+Loaded plugins: fastestmirror, langpacks
+Loading mirror speeds from cached hostfile
+ * base: mirror.ufscar.br
+ * epel: mirror.globo.com
+ * extras: mirror.ufscar.br
+ * updates: mirror.ufscar.br
+Resolving Dependencies
+--> Running transaction check
+---> Package wget.x86_64 0:1.14-18.el7 will be updated
+---> Package wget.x86_64 0:1.14-18.el7_6.1 will be an update
+--> Finished Dependency Resolution
+
+Dependencies Resolved
+
+==========================================================================
+ Package     Arch          Version                   Repository      Size
+==========================================================================
+Updating:
+ wget        x86_64        1.14-18.el7_6.1           updates        547 k
+
+Transaction Summary
+==========================================================================
+Upgrade  1 Package
+
+Total download size: 547 k
+Is this ok [y/d/N]:
+```
+
+Если вы опустите имя пакета, вы можете обновить каждый пакет в системе, для которого доступно обновление. 
+
+Чтобы проверить, доступно ли обновление для определенного пакета, используйте `yum check-update PACKAGENAME`. Как и раньше, если вы не укажете имя пакета, `yum` будет проверять наличие обновлений для каждого пакета, установленного в системе. 
+
+Чтобы удалить установленный пакет, используйте `yum remove PACKAGENAME`, где `PACKAGENAME` - это имя пакета, который вы хотите удалить.
+
+
+## Поиск пакета предоставляющего конкретный файл
+
+В предыдущем примере мы показали попытку установить редактор изображений `gimp`, которая не удалась из-за неудовлетворенных зависимостей. Однако `rpm` показывает, какие файлы отсутствуют, но не перечисляет имена пакетов, которые их предоставляют. 
+
+Например, одной из отсутствующих зависимостей была `libgimpui-2.0.so.0`. Чтобы узнать, какой пакет предоставляет это, вы можете использовать `yum whatprovides`, за которым следует имя файла, который вы ищете:
+
+```console
+# yum whatprovides libgimpui-2.0.so.0
+Loaded plugins: fastestmirror, langpacks
+Loading mirror speeds from cached hostfile
+ * base: mirror.ufscar.br
+ * epel: mirror.globo.com
+ * extras: mirror.ufscar.br
+ * updates: mirror.ufscar.br
+2:gimp-libs-2.8.22-1.el7.i686 : GIMP libraries
+Repo        : base
+Matched from:
+Provides    : libgimpui-2.0.so.0
+```
+
+Ответ - `gimp-libs-2.8.22-1.el7.i686`. Затем вы можете установить пакет с помощью команды `yum install gimp-libs`. 
+
+Это также работает для файлов, уже находящихся в вашей системе. Например, если вы хотите узнать, откуда взялся файл `/etc/hosts`, вы можете использовать:
+
+```console
+# yum whatprovides /etc/hosts
+Loaded plugins: fastestmirror, langpacks
+Loading mirror speeds from cached hostfile
+ * base: mirror.ufscar.br
+ * epel: mirror.globo.com
+ * extras: mirror.ufscar.br
+ * updates: mirror.ufscar.br
+setup-2.8.71-10.el7.noarch : A set of system configuration and setup files
+Repo        : base
+Matched from:
+Filename    : /etc/hosts
+```
+
+Ответ - `setup-2.8.71-10.el7.noarch`.
+
+
+## Получение информации о пакете
+
+Чтобы получить информацию о пакете, такую как его версия, архитектура, описание, размер и т. д. используйте `yum info PACKAGENAME`, где `PACKAGENAME` - это имя пакета, для которого вы хотите получить информацию:
+
+```console
+# yum info firefox
+Last metadata expiration check: 0:24:16 ago on Sat 21 Sep 2019 02:39:43 PM -03.
+Installed Packages
+Name         : firefox
+Version      : 69.0.1
+Release      : 3.fc30
+Architecture : x86_64
+Size         : 268 M
+Source       : firefox-69.0.1-3.fc30.src.rpm
+Repository   : @System
+From repo    : updates
+Summary      : Mozilla Firefox Web browser
+URL          : https://www.mozilla.org/firefox/
+License      : MPLv1.1 or GPLv2+ or LGPLv2+
+Description  : Mozilla Firefox is an open-source web browser, designed
+             : for standards compliance, performance and portability
+```
+
+
+## Управление репозиториями программного обеспечения
+
+
+	  
