Update 102.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
@@ -393,5 +393,47 @@ Description  : Mozilla Firefox is an open-source web browser, designed
 
 ## Управление репозиториями программного обеспечения
 
+Для `yum` «репозитории» перечислены в каталоге `/etc/yum.repos.d/`. Каждый репозиторий представлен файлом `.repo`, например `CentOS-Base.repo`. 
 
-	  
+Дополнительные репозитории могут быть добавлены пользователем, добавив файл `.repo` в каталог, упомянутый выше, или в конец `/etc/yum.conf`. Однако рекомендуемый способ добавления репозиториев или управления ими - это инструмент `yum-config-manager`. 
+
+Чтобы добавить репозиторий, используйте параметр `--add-repo`, за которым следует URL-адрес файла `.repo`.
+
+```console
+# yum-config-manager --add-repo https://rpms.remirepo.net/enterprise/remi.repo
+Loaded plugins: fastestmirror, langpacks
+adding repo from: https://rpms.remirepo.net/enterprise/remi.repo
+grabbing file https://rpms.remirepo.net/enterprise/remi.repo to /etc/yum.repos.d/remi.repo
+repo saved to /etc/yum.repos.d/remi.repo
+```
+
+Чтобы получить список всех доступных репозиториев, используйте `yum repolist all`. Вы получите примерно такой результат:
+
+```console
+# yum repolist all
+Loaded plugins: fastestmirror, langpacks
+Loading mirror speeds from cached hostfile
+ * base: mirror.ufscar.br
+ * epel: mirror.globo.com
+ * extras: mirror.ufscar.br
+ * updates: mirror.ufscar.br
+repo id                       repo name                    status
+updates/7/x86_64              CentOS-7 - Updates           enabled:  2,500
+updates-source/7              CentOS-7 - Updates Sources   disabled
+```
+
+`disabled` репозитории будут игнорироваться при установке или обновлении программного обеспечения. Чтобы включить или отключить репозиторий, используйте утилиту `yum-config-manager`, за которой следует идентификатор репозитория. 
+
+В выходных данных выше идентификатор репозитория отображается в первом столбце (идентификатор `repo`) каждой строки. Используйте только часть перед первым `/`, поэтому идентификатор репозитория `CentOS-7 - Updates` - это `updates`, а не `updates/7/x86_64`.
+
+```console
+# yum-config-manager --disable updates
+```
+
+Приведенная выше команда отключит репозиторий `updates`. Чтобы снова включить его, используйте:
+
+```console
+# yum-config-manager --enable updates
+```
+
+>Yum хранит загруженные пакеты и связанные с ними метаданные в каталоге кеша (обычно `/var/cache/yum`). По мере обновления системы и установки новых пакетов этот кеш может стать довольно большим. Чтобы очистить кеш и освободить место на диске, вы можете использовать команду `yum clean`, а затем указать что очистить. Наиболее полезными параметрами являются пакеты (`yum clean packages`) для удаления загруженных пакетов и метаданные (`yum clean metadata`) для удаления связанных метаданных. См. Страницу руководства для `yum` (введите `man yum`) для получения дополнительной информации.
