Update 102.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.5 Use RPM and YUM package management/102.5 Lesson 1.md
@@ -30,7 +30,7 @@
 Менеджер пакетов RPM (`rpm`) - важный инструмент для управления пакетами программного обеспечения в системах на основе Red Hat (или производных).
 
 
-## Установка, обновление и удаление пакетов
+### Установка, обновление и удаление пакетов
 
 Самая простая операция - установить пакет, что можно сделать с помощью:
 
@@ -67,7 +67,7 @@ error: Failed dependencies:
 Чтобы завершить операцию, сначала вам нужно будет удалить пакеты, которые зависят от того, который вы хотите удалить (в примере выше, `file-roller`). Вы можете передать несколько имен пакетов в `rpm -e`, чтобы удалить сразу несколько пакетов.
 
 
-## Работа с зависимостями
+### Работа с зависимостями
 
 Чаще всего пакет может зависеть от того, что другие будут работать должным образом. Например, редактору изображений могут потребоваться библиотеки для открытия файлов JPG, или утилите может потребоваться набор инструментов для виджетов, такой как Qt или GTK, для своего пользовательского интерфейса. 
 
@@ -98,7 +98,7 @@ error: Failed dependencies:
 Пользователь должен найти пакеты `.rpm` с соответствующими зависимостями и установить их. У менеджеров пакетов, таких как `yum`, `zypper` и `dnf`, есть инструменты, которые могут определить, какой пакет предоставляет конкретный файл. Об этом мы поговорим позже в этом уроке.
 
 
-## Список установленных пакетов
+### Список установленных пакетов
 
 Чтобы получить список всех пакетов, установленных в вашей системе, используйте `rpm -qa` (подумайте о «запросить все»).
 
@@ -116,7 +116,7 @@ libevdev-1.5.6-1.el7.x86_64
 ```
 
 
-## Получение информации о пакете
+### Получение информации о пакете
 
 Чтобы получить информацию об установленном пакете, такую как номер версии, архитектура, дата установки, упаковщик, сводка и т. д., Используйте `rpm` с параметрами `-qi` (подумайте о «запросе информации»), за которыми следует имя пакета. Например:
 
@@ -212,7 +212,7 @@ A hackable text editor for the 21st Century.
 ```
 
 
-## Определение пакета владеющего конкретным файлом
+### Определение пакета владеющего конкретным файлом
 
 Чтобы узнать, какой установленный пакет владеет файлом, используйте `-qf`(считайте, «файл запроса»), за которым следует полный путь к файлу:
 
@@ -224,14 +224,14 @@ unzip-6.0-19.el7.x86_64
 В приведенном выше примере файл `/usr/bin/unzip` принадлежит пакету `unzip-6.0-19.el7.x86_64`.
 
 
-## Модифицированный модуль обновления YellowDog (YUM)
+### Модифицированный модуль обновления YellowDog (YUM)
 
 `yum` изначально разрабатывался как *Yellow Dog Updater* (YUP), инструмент для управления пакетами в дистрибутиве Yellow Dog Linux. Со временем он эволюционировал для управления пакетами в других системах на основе RPM, таких как Fedora, CentOS, Red Hat Enterprise Linux и Oracle Linux. 
 
 Функционально она похожа на утилиту `apt` в системах на базе Debian, она может искать, устанавливать, обновлять и удалять пакеты и автоматически обрабатывать зависимости. `yum` можно использовать для установки одного пакета или для обновления всей системы сразу.
 
 
-## Поиск пакетов
+### Поиск пакетов
 
 Чтобы установить пакет, вам необходимо знать его имя. Для этого вы можете выполнить поиск с помощью `yum search PATTERN`, где `PATTERN` - это имя пакета, который вы ищете. Результатом является список пакетов, имя или сводка которых содержат указанный шаблон поиска. Например, если вам нужна утилита для обработки сжатых файлов 7Zip (с расширением `.7z`), вы можете использовать:
 
@@ -253,7 +253,7 @@ p7zip-gui.x86_64 : 7zG - 7-Zip GUI version
 ```
 
 
-## Установка, обновление и удаление пакетов
+### Установка, обновление и удаление пакетов
 
 Чтобы установить пакет с помощью yum, используйте команду `yum install PACKAGENAME`, где `PACKAGENAME` - это имя пакета. `yum` получит пакет и соответствующие зависимости из онлайн-репозитория и установит все в вашей системе.
 
@@ -326,7 +326,7 @@ Is this ok [y/d/N]:
 Чтобы удалить установленный пакет, используйте `yum remove PACKAGENAME`, где `PACKAGENAME` - это имя пакета, который вы хотите удалить.
 
 
-## Поиск пакета предоставляющего конкретный файл
+### Поиск пакета предоставляющего конкретный файл
 
 В предыдущем примере мы показали попытку установить редактор изображений `gimp`, которая не удалась из-за неудовлетворенных зависимостей. Однако `rpm` показывает, какие файлы отсутствуют, но не перечисляет имена пакетов, которые их предоставляют. 
 
@@ -367,7 +367,7 @@ Filename    : /etc/hosts
 Ответ - `setup-2.8.71-10.el7.noarch`.
 
 
-## Получение информации о пакете
+### Получение информации о пакете
 
 Чтобы получить информацию о пакете, такую как его версия, архитектура, описание, размер и т. д. используйте `yum info PACKAGENAME`, где `PACKAGENAME` - это имя пакета, для которого вы хотите получить информацию:
 
@@ -391,7 +391,7 @@ Description  : Mozilla Firefox is an open-source web browser, designed
 ```
 
 
-## Управление репозиториями программного обеспечения
+### Управление репозиториями программного обеспечения
 
 Для `yum` «репозитории» перечислены в каталоге `/etc/yum.repos.d/`. Каждый репозиторий представлен файлом `.repo`, например `CentOS-Base.repo`. 
 
@@ -437,3 +437,61 @@ updates-source/7              CentOS-7 - Updates Sources   disabled
 ```
 
 >Yum хранит загруженные пакеты и связанные с ними метаданные в каталоге кеша (обычно `/var/cache/yum`). По мере обновления системы и установки новых пакетов этот кеш может стать довольно большим. Чтобы очистить кеш и освободить место на диске, вы можете использовать команду `yum clean`, а затем указать что очистить. Наиболее полезными параметрами являются пакеты (`yum clean packages`) для удаления загруженных пакетов и метаданные (`yum clean metadata`) для удаления связанных метаданных. См. Страницу руководства для `yum` (введите `man yum`) для получения дополнительной информации.
+
+
+
+## DNF
+
+`dnf` - это инструмент управления пакетами, используемый в Fedora, и является форком `yum`. Таким образом, многие команды и параметры похожи. Этот раздел даст вам лишь краткий обзор `dnf`. 
+
+**Поиск пакетов**  
+`dnf search PATTERN`, где `PATTERN` - это то, что вы ищете. Например, `dnf search unzip` покажет все пакеты, которые содержат слово `unzip` в названии или описании. 
+
+**Получение информации о пакете**  
+`dnf info PACKAGENAME` 
+
+**Установка пакетов**  
+`dnf install PACKAGENAME`, где `PACKAGENAME` - это имя пакета, который вы хотите установить. Вы можете найти имя, выполнив поиск. 
+
+**Удаление пакетов**  
+`dnf remove PACKAGENAME` 
+
+**Обновление пакетов**  
+`dnf upgrade PACKAGENAME`, чтобы обновить только один пакет. Не указывайте имя пакета, чтобы обновить все пакеты в системе. 
+
+**Выяснение, какой пакет предоставляет конкретный файл**  
+`dnf provides FILENAME` 
+
+**Получение списка всех пакетов, установленных в системе**  
+`dnf list --installed` 
+
+**Отобраение содержимого пакета**  
+`dnf repoquery -l PACKAGENAME`
+
+>`dnf` имеет встроенную справочную систему, в которой отображается дополнительная информация (например, дополнительные параметры) для каждой команды. Чтобы использовать его, введите `dnf help`, а затем команду, например `dnf help install`.
+
+
+### Управление репозиториями программного обеспечения
+
+Как `yum` и `zypper`, `dnf` работает с программными репозиториями (repos). В каждом дистрибутиве есть список репозиториев по умолчанию, и администраторы могут добавлять или удалять репозитории по мере необходимости. 
+
+Чтобы получить список всех доступных репозиториев, используйте `dnf repolist`. Чтобы вывести список только включенных репозиториев, добавьте параметр `--enabled`, а для вывода списка только отключенных репозиториев добавьте параметр `--disabled`.
+
+```console
+# dnf repolist
+Last metadata expiration check: 0:20:09 ago on Sat 21 Sep 2019 02:39:43 PM -03.
+repo id                    repo name                                      status
+*fedora                    Fedora 30 - x86_64                             56,582
+*fedora-modular            Fedora Modular 30 - x86_64                        135
+*updates                   Fedora 30 - x86_64 - Updates                   12,774
+*updates-modular           Fedora Modular 30 - x86_64 - Updates              145
+```
+
+Чтобы добавить репозиторий, используйте `dnf config-manager --add_repo URL`, где `URL` - это полный URL репозитория. Чтобы включить репозиторий, используйте `dnf config-manager --set-enabled REPO_ID`. 
+
+Аналогичным образом, чтобы отключить репозиторий, используйте `dnf config-manager --set-disabled REPO_ID`. В обоих случаях `REPO_ID` - это уникальный идентификатор репозитория, который вы можете получить с помощью `dnf repolist`. Добавленные репозитории включены по умолчанию. 
+
+Репозитории хранятся в файлах `.repo` в каталоге `/etc/yum.repos.d/` с точно таким же синтаксисом, который используется для `yum`.
+
+
+## Zypper
